--- a/css/footer_styles.css
+++ b/css/footer_styles.css
@@ -18,9 +18,8 @@
   margin-right: 0;
   margin-top: 0;
 }
-
-#block-menu-menu-footer-menu-top {
-  margin-bottom:0;
+#block-system-user-menu {
+  text-align: right;
 }
 
 .content-page-bottom{
